edition = "2023";

option go_package = "./auction";

service Node {
  rpc Bid(BidRequest) returns (BidResponse) {}
  rpc Result(void) returns (Outcome) {}
  rpc Ping(void) returns (void) {}
}

message BidRequest {
  int64 senderId = 1;
  uint64 timestamp = 2;
  uint64 amount = 3;
}

message BidResponse {
  int64 senderId = 1;
  uint64 timestamp = 2;
  eAck ack = 3;
}

enum eAck {
  Exception = 0;
  Fail = 1;
  Success = 2;
}

message Outcome {
  int64 senderId = 1;
  uint64 timestamp = 2;
  uint64 leadingBid = 3;
  int64 leadingID = 4;
  int64 auctionStartTime = 5;
  int64 auctionEndTime = 6;
}

message void {
  int64 senderId = 1;
  uint64 timestamp = 2;
}